# riff

./: .gitignore  AGENTS.md  Cargo.toml  PERFORMANCE_NOTES.md  PRACTICAL_TESTING.md  README.md  build.rs  dictate  perf_iteration_log.json  riff
assets/: export-gif.mjs
scripts/: build_bundled_python_runtime.sh  create_distribution_artifact.sh  ispy_web_server.py  parakeet-requirements.txt  parakeet_transcribe.py  pick_ispy_sounds.sh  pick_riff_sounds.sh  release.sh  riff_web_server.py  run_nemo_model_bakeoff.sh  run_start_stop_experiment.sh  test_parakeet_protocol.py  toggle_dictate_and_paste.sh  toggle_riff.sh  toggle_riff_and_open_html.sh  toggle_riff_and_paste.sh  toggle_riff_send_and_paste.sh
scripts/hooks/: add_bangs.sh  remove_fillers.sh  remove_ums.sh
src/: cli.rs  error.rs  history.rs  main.rs  models.rs  paths.rs  reporting.rs  screenshots.rs  session_commands.rs  setup.rs  transcription.rs
src/shot_modules/: enhanced.rs  framed.rs  mod.rs  original.rs  polaroid.rs
tests/: cli_smoke.rs  test_parakeet_startup.py  test_web_server_security.py
