[package]
name = "riff"
version = "0.1.2"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "tiff"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
